--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/pushingToTheLimit.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang3-3.8.1.jar=C:\\Users\\deivi\\Downloads\\UCanAccess-5.0.0-bin\\UCanAccess-5.0.0-bin\\lib\\commons-lang3-3.8.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\deivi\\Downloads\\UCanAccess-5.0.0-bin\\UCanAccess-5.0.0-bin\\lib\\commons-logging-1.2.jar
+file.reference.hsqldb-2.5.0.jar=C:\\Users\\deivi\\Downloads\\UCanAccess-5.0.0-bin\\UCanAccess-5.0.0-bin\\lib\\hsqldb-2.5.0.jar
+file.reference.jackcess-3.0.1.jar=C:\\Users\\deivi\\Downloads\\UCanAccess-5.0.0-bin\\UCanAccess-5.0.0-bin\\lib\\jackcess-3.0.1.jar
+file.reference.ucanaccess-5.0.0.jar=C:\\Users\\deivi\\Downloads\\UCanAccess-5.0.0-bin\\UCanAccess-5.0.0-bin\\ucanaccess-5.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MsAccess.classpath}
+    ${file.reference.commons-lang3-3.8.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.hsqldb-2.5.0.jar}:\
+    ${file.reference.jackcess-3.0.1.jar}:\
+    ${file.reference.ucanaccess-5.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=pkg.access.PrbAccess
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
